packages/typ/tests/fixtures/diagnostics/0790_polyvar_tuple_payload_mismatch_03.ml
let _ : [ `P of int * bool ] = `P (true, 2)
